force-app/main/default/objects/Shipping_Address__c/Shipping_Address__c.object-meta.xml
<CustomObject>
    <label>Shipping Address</label>
    <nameField>
        <displayFormat>sh-{0000}</displayFormat>
        <label>Shipping Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>