force-app/main/default/objects/Shipping_Address__c/fields/Address_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Code__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Address Code</label>
    <type>AutoNumber</type>
</CustomField>