force-app/main/default/objects/Shipping_Address__c/fields/Same_as_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>Same_as_BillingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as BillingAddress</label>
    <type>Checkbox</type>
</CustomField>